Sonar cleaning